<resources>
    <string name="app_name">Chat-Ptit</string>
    <string name="hint_name">userName</string>
    <string name="hint_email">email</string>

    <string name="btn_sign_up">sign_up</string>
    <string name="register"><u>Register Account</u></string>
    <string name="emailRegister">Email :</string>
    <string name="phoneNumberRegister">Phone number:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_login_err_msg">Tên Tài Khoảng Không Tồn Tại \n Hoặc Mật Khẩu Không Đúng</string>
    <string name="txt_login_success_msg">Đăng Nhập Thành Công</string>

    <string name="txt_err1_create_room">Tạo phòng thất bại</string>
    <string name="txt_err2_create_room">Bạn chỉ đươc tạo tối đa một phòng</string>
    <string name="txt_success_create_room">Tạo phòng thành công</string>
    <string name="txtConnectFail">NO CONNECT TO INTERNET</string>
    <string name="information">Thông tin cá nhân</string>
    <string name="userlogin">USERLOGIN</string>

    <string name="roomSelected">RoomSelected</string>

    <string name="txt_user_share_preference">USER_INFOMATION</string>
    <string name="txt_is_saved_infomation">IsSavedInfomation</string>
    <string name="txt_file_share_preference">INFORMATION</string>
    <string name="txt_current_userLogin">USER_CURRENT</string>

    <string name="signinwith"> Sign in with</string>
    <string name="user">UserName</string>
    <string name="mail">Mail Address</string>
    <string name="phone">Phone Number</string>
    <string name="password">Password</string>
    <string name="forgotpassword">Chưa có tài khoản? </string>
    <string name="keepsignin">Keep In Sign In</string>
    <string name="logninfacebook">LogIn With Facebook</string>
    <string name="boqua">Bỏ qua</string>
    <string name="login">Log in</string>
    <string name="or"> Or </string>

    <string name="displayname"> Display name : </string>
    <string name="edit"> Edit </string>
    <!--<string name="or"> Or </string>-->


    <!--Library ID here-->
    <string name="facebook_app_id">1035310043221922</string>
    <string name="birthday">Birthday :</string>
    <string name="gender">Gender :</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="Phone">Phone :</string>
    <string name="seePhoto">See Photo</string>
    <string name="camera">Take a new photo</string>
    <string name="selectedPhoto">Selected photos in the gallery</string>
    <string name="save">Save</string>
    <string name="ChangePassword">Change password</string>
    <string name="oldPassword">Old password:</string>
    <string name="enterOldPass">Enter old password</string>
    <string name="newPassword">New password</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="btnSave">SAVE</string>
    <string name="btnCancel">CANCEL</string>
    <string name="error_OldPass">Old passwrod is wrong !</string>
    <string name="error_confirmPass">Confirm password is wrong !</string>
    <string name="dontEnterConfirmPass">You must enter confirm password</string>
    <string name="dontEnterNewPass">You must enter new password</string>
    <string name="ChangeAvatar">Change Avatar</string>
    <string name="ChangeBackground">Change Background</string>
    <string name="enterNewPassword">Enter New password</string>
    <string name="enterConfirmPass">Enter confirm pass</string>
</resources>
