<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        app:contentPadding="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/blue"
            android:textSize="25dp"
            android:text="@string/ChangePassword"/>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="2dp"
        app:cardElevation="2dp"
        app:contentPadding="10dp"
    >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:lineSpacingExtra="8dp"
                android:text="@string/oldPassword"
                android:textSize="15sp"
                android:layout_weight="1.2" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:gravity="center"
                android:hint="@string/enterOldPass"
                android:id="@+id/txtOldPassword"
                android:inputType="textPassword"
                android:textSize="15sp"
                android:layout_weight="1" />
            <ImageButton
                android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lineSpacingExtra="8dp"
            android:gravity="right"
            android:src="@drawable/showpass"
            android:id="@+id/btnShowOld"
            android:layout_weight="1.9"
           />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="2dp"
        app:cardElevation="2dp"
        app:contentPadding="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:lineSpacingExtra="8dp"
            android:text="@string/newPassword"
            android:textSize="15sp"
            android:layout_weight="1.2" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:hint="@string/enterNewPassword"
            android:gravity="center"
            android:id="@+id/txtNewPassword"
            android:inputType="textPassword"
            android:textSize="15sp"
            android:layout_weight="1" />

            <ImageButton
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lineSpacingExtra="8dp"
                android:gravity="right"
                android:src="@drawable/showpass"
                android:id="@+id/btnShowNew"
                android:layout_weight="1.9"
                />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="2dp"
        app:cardElevation="2dp"
        app:contentPadding="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:lineSpacingExtra="8dp"
            android:text="@string/confirmPassword"
            android:textSize="15sp"
            android:layout_weight="1.2" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:hint="@string/enterConfirmPass"
            android:gravity="center"
            android:id="@+id/txtConfirmPassword"
            android:inputType="textPassword"
            android:textSize="15sp"
            android:layout_weight="1" />

            <ImageButton
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lineSpacingExtra="8dp"
                android:gravity="right"
                android:src="@drawable/showpass"
                android:id="@+id/btnShowConfirm"
                android:layout_weight="1.9"
                 />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSave"
            android:layout_weight="1"
            android:text="@string/btnSave"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCancel"
            android:layout_weight="1"
            android:text="@string/btnCancel"/>
    </LinearLayout>


</LinearLayout>
