<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:cardElevation="2dp"
        app:contentPadding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/ChangeAvatar"
            android:id="@+id/txtTitle"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textColor="@color/blue"
            android:textSize="30dp"
            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:cardElevation="2dp"
        app:contentPadding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/seePhoto"
        android:id="@+id/txtSeePhoto"
        android:layout_gravity="center_horizontal"
        android:gravity="left"
        android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:cardElevation="2dp"
        app:contentPadding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/camera"
        android:id="@+id/txtTakePhoto"
        android:layout_gravity="center_horizontal"
        android:gravity="left" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:cardElevation="2dp"
        app:contentPadding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/selectedPhoto"
        android:id="@+id/txtSelectedPhotoFromGallery"
        android:layout_gravity="center_horizontal"
        android:gravity="left" />
    </android.support.v7.widget.CardView>

</LinearLayout>
