<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#01A9F2"

    android:weightSum="1">

    <ImageView
        android:contentDescription="@string/app_name"
        android:layout_width="133dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_forum_white_48dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/marginTopHinh"
        android:layout_weight="0.27" />



    <!--<LinearLayout-->
        <!--android:background="@null"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal"-->
        <!--android:gravity="center"-->
        <!--android:layout_marginTop="@dimen/canhle20"-->
        <!--&gt;-->

    <!--</LinearLayout>-->


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/user"
            android:textColorHint="#fff"
            android:drawableStart="@drawable/ic_account_circle_white_24dp"
            android:drawableLeft="@drawable/ic_account_circle_white_24dp"
            android:drawablePadding="@dimen/canhlehinh20"
            android:layout_marginLeft="@dimen/canhle20"
            android:layout_marginRight="@dimen/canhle20"
            android:background="#01A9F2"
            android:textColor="#fff"
            android:padding="@dimen/canhle10"
            android:id="@+id/txtUserNameRegister"
            android:layout_weight="1" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:drawablePadding="@dimen/canhle10"
        android:layout_marginLeft="@dimen/canhle20"
        android:layout_marginRight="@dimen/canhle20"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView2"
       />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:drawablePadding="@dimen/canhle10"
        android:layout_marginLeft="@dimen/canhle20"
        android:layout_marginRight="@dimen/canhle20"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView"
        android:background="#0286D0" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:drawableStart="@drawable/ic_vpn_key_white_24dp"
        android:drawableLeft="@drawable/ic_vpn_key_white_24dp"
        android:drawablePadding="@dimen/canhlehinh20"
        android:layout_marginLeft="@dimen/canhle20"
        android:layout_marginRight="@dimen/canhle20"

        android:textColorHint="#fff"
        android:background="#01A9F2"
        android:textColor="#fff"
        android:padding="@dimen/canhle10"
        android:inputType="textPassword"
        android:id="@+id/txtPassword" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:drawablePadding="@dimen/canhle10"
        android:layout_marginLeft="@dimen/canhle20"
        android:layout_marginRight="@dimen/canhle20"
        android:textAppearance="?android:attr/textAppearanceLarge"

        android:background="#0286D0" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mail"
        android:textColorHint="#fff"
        android:drawableStart="@drawable/ic_mail_outline_white_24dp"
        android:drawableLeft="@drawable/ic_mail_outline_white_24dp"
        android:drawablePadding="@dimen/canhlehinh20"
        android:layout_marginLeft="@dimen/canhle20"
        android:layout_marginRight="@dimen/canhle20"
        android:background="#01A9F2"
        android:textColor="#fff"
        android:padding="@dimen/canhle10"
        android:inputType="textEmailAddress"
        android:id="@+id/txtEmailRegister" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:drawablePadding="@dimen/canhle10"
        android:layout_marginLeft="@dimen/canhle20"
        android:layout_marginRight="@dimen/canhle20"
        android:textAppearance="?android:attr/textAppearanceLarge"

        android:background="#0286D0" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:textColorHint="#fff"
        android:drawableStart="@drawable/ic_smartphone_white_24dp"
        android:drawableLeft="@drawable/ic_smartphone_white_24dp"
        android:drawablePadding="@dimen/canhlehinh20"
        android:layout_marginLeft="@dimen/canhle20"
        android:layout_marginRight="@dimen/canhle20"
        android:background="#01A9F2"
        android:textColor="#fff"
        android:padding="@dimen/canhle10"
        android:id="@+id/txtPhonenumber"
        android:layout_gravity="center_horizontal"
        android:inputType="number" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"

        android:textColor="#01A9F2"
        android:background="#fff"
        android:layout_marginLeft="@dimen/canhle20"
        android:layout_marginRight="@dimen/canhle20"
        android:layout_marginTop="@dimen/canhle20"
        android:textSize="@dimen/kichthuocchu20"
        android:paddingTop="@dimen/canhle20"
        android:paddingBottom="@dimen/canhle20"
        android:id="@+id/btnRegister1" />




</LinearLayout>
